# CVgeex3

./: CNAME  README.md  main.py  pyproject.toml  replit.nix  usuarios.json
static/: style.css
templates/: index.html  login.html  registro.html
